# tamos

./: .gitignore  Batch analysis.ipynb  pyproject.toml  readme.md
docs/source/: conf.py  element_IO_components.rst  general_settings.rst  network_components.rst  storage_components.rst
examples/A.basic_example/src/: main.py
examples/B.medium_example/src/: main.py
src/tamos/: __init__.py  component.py  hub.py  mask.py  optimization.py
src/tamos/data_IO/: __init__.py  data_IO.py
src/tamos/element/: element.py
src/tamos/elementIO/: elementIO_base.py  element_cost.py  load.py
src/tamos/network/: HRE_thermal_network.py  network_base.py  non_thermal_network.py  thermal_network.py
src/tamos/production/: boiler.py  cogeneration.py  dry_cooler.py  heat_exchanger.py  heat_pump.py  misc.py  production_base.py  solar.py
src/tamos/storage/: same_vector.py  storage_base.py  thermocline.py
