[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tamos"
version = "0.1.0"
authors = [
  { name="Boris NEROT", email="boris.nerot@gmail.com" },
]
description = "Thermal Architectures Modelling and Optimization Software"
readme = "readme.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/BNerot/tamos"
